project(ffbackup-restore)
cmake_minimum_required(VERSION 2.6)
aux_source_directory(. src_list)
#set(src_list restore.cpp commonfunctions.cpp ffbuffer.cpp helper.cpp)
add_executable(${PROJECT_NAME} ${src_list})
target_link_libraries(${PROJECT_NAME} ssl rsync)
add_definitions(-Wall -D_FILE_OFFSET_BITS=64)
